tests/ui/type-alias-impl-trait/recursive-fn-tait.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/recursive-fn-tait.rs:14:5
   |
LL |     move |x: usize| m(n(x))
   |     ^^^^^^^^^^^^^^^^^^^^^^^ expected `{closure@$DIR/recursive-fn-tait.rs:7:5: 7:16}`, got `{closure@$DIR/recursive-fn-tait.rs:14:5: 14:20}`
   |
note: previous use here
  --> $DIR/recursive-fn-tait.rs:7:5
   |
LL |     |_: usize |loop {}
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

